<resources>
    <string name="app_name">SportNutrition</string>
    <string name="Correo_Electronico">Correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Iniciar_Ss" />
    <string name="Iniciar_Sesion">Iniciar Sesion</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Correo">Correo</string>
    <string name="Registrarse_1">Registrarse</string>
    <string name="Registro">Registro</string>
    <string name="Registro1">Registro</string>
    <string name="Registrarse_2">Registrarse\n</string>
    <string name="Usuario">Usuario\n</string>
    <string name="producto">Productos\n</string>
    <string name="psicotic">psicotic</string>
    <string name="CerrarSesion">Cerrar Sesion\n</string>
    <string name="InsertarProductos">Insertar Productos\n</string>
    <string name="Guardar">Guardar</string>
    <string name="Id">Id</string>
    <string name="Nombre_Producto">Nombre Producto</string>
    <string name="Precio">Precio</string>
    <string name="Modificar">Modificar</string>
    <string name="Modificar_1">Modificar</string>
    <string name="Id_1">Id</string>
    <string name="Nombre">Nombre Producto</string>
    <string name="Precio_1">Precio</string>
    <string name="Eliminar">Eliminar\n</string>
    <string name="Ids">Id Producto</string>
    <string name="Nombre_product0">Nombre del Producto</string>
    <string name="Price">Precios</string>
    <string name="EliminarProducto">Eliminar</string>
    <string name="VerProductos">verProductos\n</string>
    <string name="btnAgregar">Agregar</string>
    <string name="agregar">Agregar\n</string>
    <string name="actualizar">Modificar</string>
    <string name="Carrito">Carrito de compras</string>
    <string name="Comprar">Buy</string>
    <string name="Ver_Carrito">Ver Carrito</string>
</resources>