<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F44336"
    android:backgroundTint="#FF0202"
    tools:context=".Inicio">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="195dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sportnutrition" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/producto"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    <Button
        android:id="@+id/btnVerProductos"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/black"
        android:text="@string/Ver_Carrito"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPsicotic" />

    <ImageView
        android:id="@+id/imgCbum"
        android:layout_width="111dp"
        android:layout_height="118dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/cbum" />

    <ImageView
        android:id="@+id/imgPsicotic"
        android:layout_width="122dp"
        android:layout_height="115dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@+id/imgCbum"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/sicotic" />

    <ImageView
        android:id="@+id/imgRyse"
        android:layout_width="90dp"
        android:layout_height="114dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgPsicotic"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/ryse" />

    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/black"
        android:text="@string/CerrarSesion"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVerProductos" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="346dp"
        android:layout_height="47dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/black"
        android:text="@string/agregar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCerrarSesion" />

    <Button
        android:id="@+id/btnModificar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/black"
        android:text="@string/actualizar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAgregar" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="351dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/black"
        android:text="@string/Eliminar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnModificar" />

</androidx.constraintlayout.widget.ConstraintLayout>